# backEnd/swagger.yaml
@@ -46,6 +46,51 @@ paths:
           schema:
             $ref: "#/definitions/ActionFailure"
 
+  /login:
+    post:
+      security: [ ]
+      parameters:
+        - in: body
+          name: credentials
+          required: true
+          schema:
+            $ref: "#/definitions/LoginRequest"
+      responses:
+        200:
+          description: "登录成功，返回 JWT 令牌"
+          schema:
+            $ref: "#/definitions/LoginResponse"
+        401:
+          description: "用户名或密码错误"
+          schema:
+            $ref: "#/definitions/UnauthorizedError"
+        500:
+          description: "内部错误"
+          schema:
+            $ref: "#/definitions/ActionFailure"
+  /register:
+    post:
+      security: [ ]
+      parameters:
+        - in: body
+          name: data
+          required: true
+          schema:
+            $ref: "#/definitions/RegisterRequest"
+      responses:
+        200:
+          description: "注册成功"
+          schema:
+            $ref: "#/definitions/RegisterResponse"
+        400:
+          description: "输入参数错误"
+          schema:
+            $ref: "#/definitions/BadRequestError"
+        500:
+          description: "内部错误"
+          schema:
+            $ref: "#/definitions/ActionFailure"
+
 definitions:
   Version:
     type: object
@@ -178,3 +223,81 @@ definitions:
       InstalledOn:
         type: string
         description: "安装时间"
+
+  LoginRequest:
+    type: object
+    required:
+      - secrete
+      - name
+      - password
+    properties:
+      secrete:
+        type: string
+        description: "server 提供的secrete"
+      name:
+        type: string
+        description: "用户名"
+      password:
+        type: string
+        description: "密码"
+
+  LoginResponse:
+    type: object
+    required:
+      - success
+      - jwt
+    properties:
+      success:
+        type: boolean
+        default: true
+        description: "是否成功"
+      jwt:
+        type: string
+        description: "JWT 令牌"
+        default: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c"
+        # 登陆失败搞个 假的 jwt 搞心态
+
+  RegisterRequest:
+    type: object
+    required:
+      - userName
+      - passWord
+      - secrete
+    properties:
+      userName:
+        type: string
+        description: "用户名"
+      passWord:
+        type: string
+        description: "密码"
+      secrete:
+        type: string
+        description: "server 提供的token"
+
+
+  RegisterResponse:
+    type: object
+    required:
+      - success
+      - message
+    properties:
+      success:
+        type: boolean
+        default: true
+      message:
+        type: string
+        default: "注册成功"
+
+  BadRequestError:
+    type: object
+    required:
+      - message
+      - code
+    properties:
+      message:
+        type: string
+        description: "输入参数错误"
+      code:
+        type: integer
+        description: "400"
+
